syntax = "proto3";
package author;

option go_package = "./author";

message EmptyResponse {
  int32 status_code = 1;
}

message DeleteRequest {
  int64 author_id = 1;
}

message GetRequest {
  int64 author_id = 1;
}

message GetResponse {
  int64 id = 1;
  string name = 2;
  string description = 3;
  int32 status_code = 4;
}

message SearchRequest {
  string name = 1;
  int32 offset = 2;
  int32 limit = 3;
}

message SearchItem {
  int64 id = 1;
  string name = 2;
  string description = 3;
}

message SearchResponse {
  repeated SearchItem items = 1;
  int32 statusCode = 2;
}

message UpdateRequest {
  int64 id = 1;
  string name = 2;
  string description = 3;
  repeated int64 books_ids = 4;
}

message CreateRequest {
  string name = 1;
  string description = 2;
  repeated int64 books_ids = 3;
}

message CreateResponse {
  int64 author_id = 1;
  int32 status_code = 2;
}
